[tool.poetry]
name = "digital-wallet"
version = "0.1.0"
description = "practice FastAPI and PostgreSQL"
authors = ["Iffahan Suksuwan <iffahan.suksuwan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.0"
uvicorn = "^0.30.5"
sqlmodel = "^0.0.21"
pg8000 = "^1.31.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
